--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>WebAssembly Example</title>
+</head>
 <body>
 
-<h2>HTML Image</h2>
-<img src="pic_trulli.jpg" alt="Trulli" width="500" height="333">
+    <script>
+        // 加载WebAssembly模块
+        fetch('无标题9z.wasm')
+            .then(response => response.arrayBuffer())
+            .then(bytes => WebAssembly.instantiate(bytes, {}))
+            .then(results => {
+                const instance = results.instance;
 
+                // 在这里可以调用WebAssembly模块的函数
+            })
+            .catch(error => {
+                console.error('Error loading WebAssembly:', error);
+            });
+    </script>
 </body>
 </html>
-
