--- a/d.html
+++ b/d.html
@@ -1,4 +1,4 @@
-aaaaazzzz
+111
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +9,7 @@ aaaaazzzz
 
     <script>
         // 加载WebAssembly模块
-        fetch('无标题9z.wasm')
+        fetch('untitled9z.wasm')
             .then(response => response.arrayBuffer())
             .then(bytes => WebAssembly.instantiate(bytes, {}))
             .then(results => {
